# online-weather-dispay

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt  loger.cpp  loger.hpp  weather_manager.cpp  weather_manager.hpp  window_display.cpp  window_display.hpp
